=============================================================================

Version 0.15+git, not yet released
------------------------------------

* Progress output is now flushed after every write. This matters, when
  the output goes to a pipe, because then Python would buffer the
  output, meaning that progress output gets delayed until the buffer
  fills up, and that's useless.


Version 0.15, released 2020-05-05
------------------------------------

### New and changed features

* Document and rename the `virtual-filesystems` plugin. This allows
  installation of Debian packages that require `/proc` to be mounted
  to install, such as `ca-certificates-java`.
  
  Undo previous changes to have `/proc` automatically mounted in the
  chroot, when running commands in the chroot. That wasn't enough
  (e.g., it didn't cover Ansible), and `virtual-filesystems` seems
  generally like the more general and better solution.

  The `grub` step handles the filesystems it needs itself, but doesn't
  mind if they're already mounted.

  This change should NOT require changes to existing, working .vmdb
  files. If it does, please report a bug.

* The .vmdb file can now be passed in via the standard input, by
  specifying `-` as the filename. Patch from voney.

* The manual now documents that un-partitioned images are not
  supported, at least not yet.
  
* The "All went fine" message is now written at the very end of the
  vmdb2 run, if at all. Previously all the messages from teardown
  parts of steps were printed after it, hiding it effectively.
  
* The standard output and error output of the commands vmdb2 runs are
  no longer logged in real time, only after the command has finished.
  This is a side effect of the `cliapp.runcmd` helper function no
  longer being used. The Python standard library subprocess module is
  used directly instead. This change is a step to drop the dependency
  on the cliapp library.

### Bug fixes
