@@ -45,3 +45,4 @@ steps:
 
   - grub: bios
     tag: /
+    quiet: false
